@@ -1,11 +1,12 @@
-dstring_cpyb.o
-dstring_cpys.o
-dstring_copy.o
+dstring_0.o
 dstring_cat.o
 dstring_catb.o
 dstring_cats.o
-dstring_cat0.o
-dstring_0.o
 dstring_chop.o
+dstring_copy.o
+dstring_cpyb.o
+dstring_cpys.o
+dstring_data.o
 dstring_init.o
+dstring_size.o
 dstring_trunc.o
