@@ -264,3 +264,4 @@
 20070506 code: renamed set_alloc() functions to alloc_set_alloc() etc.
 20070506 version: corelib 0.54
 20070510 code: added fmt_pad functions.
+20070519 code: removed dstring_cat0 and redundant if statement from dstring_0.
